--- a/UMS.Web/UMS.Web.csproj
+++ b/UMS.Web/UMS.Web.csproj
@@ -189,6 +189,14 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\dataTables\dataTables.bootstrap.css" />
+    <Content Include="Content\dataTables\dataTables.responsive.css" />
+    <Content Include="Content\dataTables\dataTables.tableTools.min.css" />
+    <Content Include="Content\images\sort_asc.png" />
+    <Content Include="Content\images\sort_asc_disabled.png" />
+    <Content Include="Content\images\sort_both.png" />
+    <Content Include="Content\images\sort_desc.png" />
+    <Content Include="Content\images\sort_desc_disabled.png" />
     <Content Include="Content\signin.css" />
     <Content Include="Content\site.css" />
     <Content Include="Content\toastr.css" />
@@ -207,7 +215,14 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
+    <Content Include="scripts\dataTables\Polish.json" />
     <None Include="scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="scripts\dataTables\dataTables.bootstrap.js" />
+    <Content Include="scripts\dataTables\dataTables.responsive.js" />
+    <Content Include="scripts\dataTables\dataTables.tableTools.min.js" />
+    <Content Include="scripts\dataTables\jquery.dataTables.js" />
+    <Content Include="scripts\dataTables\swf\copy_csv_xls.swf" />
+    <Content Include="scripts\dataTables\swf\copy_csv_xls_pdf.swf" />
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\jquery-1.10.2.min.map" />
@@ -239,7 +254,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Hubs\OnlineUser.cs" />
+    <Compile Include="Helpers\MappingExpressionExtensions.cs" />
+    <Compile Include="Hubs\HubModels\OnlineUser.cs" />
+    <Compile Include="Hubs\HubModels\OnlineUserStatus.cs" />
     <Compile Include="Hubs\UserActivityHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
